src/Pages/Home/Home.module.css
/* homeHeader */
.homeHeader{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100vh;
    max-height: 800px;
}

/* productCarousel */
.productCarousel{
    display: flex;
    align-items: center;
    height: 100vh;
    max-height: 800px;
}

/* lampSeparator */
.lampSeparator{
    display: flex;
    align-items: center;
    height: 50vh;
    max-height: 800px;
}

